# lunaroute

./: .editorconfig  .gitignore  API_SPEC_COMPARISON.md  CLAUDE_CODE_GUIDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PHASE_11B_CODE_REVIEW.md  README.md  TODO.md  clippy.toml  config.example.yaml  config.yaml  release.sh  rustfmt.toml  test_proxy.sh
.claude/agents/: rust-web-security-reviewer.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/lunaroute-cli/: Cargo.toml
crates/lunaroute-cli/src/: main.rs
crates/lunaroute-config-file/: Cargo.toml
crates/lunaroute-config-file/src/: file_store.rs  lib.rs
crates/lunaroute-config-postgres/: Cargo.toml
crates/lunaroute-config-postgres/src/: lib.rs  postgres_config_store.rs
crates/lunaroute-core/: Cargo.toml
crates/lunaroute-core/src/: config_store.rs  error.rs  events.rs  lib.rs  normalized.rs  provider.rs  session_store.rs  template.rs  tenant.rs  types.rs
crates/lunaroute-core/src/normalized/: tests.rs
crates/lunaroute-core/src/provider/: tests.rs
crates/lunaroute-demos/: Cargo.toml
crates/lunaroute-demos/src/: main.rs
crates/lunaroute-egress/: Cargo.toml
crates/lunaroute-egress/src/: anthropic.rs  client.rs  codex_auth.rs  codex_headers.rs  lib.rs  openai.rs  retry_after.rs
crates/lunaroute-egress/tests/: connection_pool_test.rs  integration_anthropic_wiremock.rs  integration_openai_wiremock.rs
crates/lunaroute-ingress/: Cargo.toml
crates/lunaroute-ingress/src/: anthropic.rs  async_stream_parser.rs  bypass.rs  lib.rs  marker.rs  middleware.rs  multi_dialect.rs  openai.rs  provider_registry.rs  responses_ws.rs  streaming_metrics.rs  types.rs
crates/lunaroute-ingress/tests/: integration_anthropic.rs  integration_openai.rs  routed_recording.rs
crates/lunaroute-integration-tests/: Cargo.toml  README.md
crates/lunaroute-integration-tests/src/: lib.rs
crates/lunaroute-integration-tests/tests/: anthropic_to_openai_translation.rs  bypass_integration.rs  common.rs  custom_headers_body_mods.rs  e2e_with_observability.rs  error_handling_with_recording.rs  limits_alternative_strategy.rs  openai_to_anthropic_translation.rs  passthrough_streaming_recording.rs  real_api_tests.rs  responses_websocket.rs  router_observability_integration.rs  streaming_e2e.rs  switch_notification_integration.rs
crates/lunaroute-observability/: Cargo.toml
crates/lunaroute-observability/src/: health.rs  lib.rs  metrics.rs  tracing.rs
crates/lunaroute-observability/tests/: observability_integration.rs
crates/lunaroute-pii/: Cargo.toml
crates/lunaroute-pii/src/: detector.rs  lib.rs  redactor.rs
crates/lunaroute-pii/src/detector/: regex_detector.rs  tests.rs
crates/lunaroute-pii/src/redactor/: standard_redactor.rs  tests.rs
crates/lunaroute-routing/: Cargo.toml  README.md
crates/lunaroute-routing/src/: circuit_breaker.rs  health.rs  lib.rs  notification.rs  path_classifier.rs  provider_config.rs  provider_router.rs  router.rs  strategy.rs
crates/lunaroute-routing/tests/: router_integration.rs  router_streaming_integration.rs
crates/lunaroute-server/: Cargo.toml  README.md  build.rs
crates/lunaroute-server/src/: app.rs  bootstrap.rs  config.rs  main.rs  session_factory.rs  session_stats.rs
crates/lunaroute-session/: Cargo.toml  README.md
crates/lunaroute-session-postgres/: Cargo.toml
crates/lunaroute-session-postgres/src/: config.rs  lib.rs  (+3 more)
crates/lunaroute-session-sqlite/: Cargo.toml
crates/lunaroute-session-sqlite/src/: lib.rs  sqlite_session_store.rs
crates/lunaroute-session-timescale/: Cargo.toml
crates/lunaroute-session-timescale/src/: lib.rs  timescale_session_store.rs
crates/lunaroute-session/src/: cleanup.rs  config.rs  events.rs  factory.rs  import.rs  jsonl_writer.rs  lib.rs  pii_redaction.rs  pii_redaction_tests.rs  recorder.rs  recording_provider.rs  search.rs  session.rs  session_store_recording_provider.rs  sqlite_writer.rs  tenant_scoped_store.rs  tool_mapper.rs  writer.rs
crates/lunaroute-storage/: Cargo.toml
crates/lunaroute-storage/src/: atomic_writer.rs  buffer_pool.rs  compression.rs  config.rs  encryption.rs  file_lock.rs  lib.rs  rolling_writer.rs  session.rs  session_index.rs  state.rs  traits.rs
crates/lunaroute-storage/src/traits/: tests.rs
crates/lunaroute-ui/: Cargo.toml  askama.toml
crates/lunaroute-ui/src/: lib.rs  models.rs  pricing.rs  queries.rs  server.rs  stats.rs
crates/lunaroute-ui/src/handlers/: analytics.rs  api.rs  dashboard.rs  mod.rs  sessions.rs  settings.rs  static_files.rs
crates/lunaroute-ui/src/static/css/: style.css
crates/lunaroute-ui/src/static/js/: app.js  charts.js
crates/lunaroute-ui/src/templates/: analytics.html  base.html  dashboard.html  session_detail.html  sessions_list.html  settings.html
docs/: CLAUDE_CODE_GUIDE.md  CONNECTION_POOL_CONFIGURATION.md  CONNECTION_POOL_ENV_VARS.md  CONNECTION_POOL_TESTING.md  INGRESS_SECURITY.md  STORAGE_SECURITY.md  TEST_COVERAGE_ANALYSIS.md  TEST_SESSION_RECORDING.md  TOOL_FAILURE_DETECTION.md  async-session-recording-usage.md  limits-alternative-routing-strategy.md  multi-tenancy-architecture.md  prd.md  session-recording-architecture.md  session-recording-implementation.md  session-recording-jsonl-format.md  session-recording-queries.md  session-recording-summary.md  streaming-metrics.md  tech-prd.md
docs/plans/: 2025-11-14-provider-switch-notification-design.md  2025-11-14-provider-switch-notification.md  2026-04-16-codex-ws-smoke.md
examples/: CUDA_WORKING.md  Cargo.toml  LIBTORCH_VERIFICATION.md  cuda_check.rs  cuda_test.rs  test_torch  test_torch.cpp  verify_libtorch_cuda.sh
examples/configs/: README.md  anthropic-proxy.yaml  bypass-disabled.yaml  bypass-enabled-default.yaml  bypass-explicit-provider.yaml  claude-code-proxy-with-recording.yaml  claude-code-proxy.yaml  connection-pool-example.yaml  development.yaml  dual-dialect-passthrough.yaml  openai-proxy-with-recording.yaml  openai-proxy.yaml  production.yaml  provider-switch-notification.yaml  routing-strategies.yaml
scripts/: pre-commit
tools/backfill-sqlite/: Cargo.toml  main.rs
(+16 files in other folders)
