[package]
name = "lunaroute-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "luna"
path = "src/main.rs"

[dependencies]
lunaroute-core = { path = "../lunaroute-core" }
lunaroute-storage = { path = "../lunaroute-storage" }
lunaroute-ingress = { path = "../lunaroute-ingress" }
lunaroute-egress = { path = "../lunaroute-egress" }
lunaroute-routing = { path = "../lunaroute-routing" }
lunaroute-session = { path = "../lunaroute-session" }
lunaroute-pii = { path = "../lunaroute-pii" }
lunaroute-observability = { path = "../lunaroute-observability" }

tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
