[package]
name = "lunaroute-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true}
async-trait = "0.1"
regex = "1.10"
once_cell = "1.19"
chrono = "0.4"
tracing = { workspace = true }
