[package]
name = "lunaroute-ingress"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
lunaroute-core = { path = "../lunaroute-core" }
lunaroute-egress = { path = "../lunaroute-egress" }
lunaroute-observability = { path = "../lunaroute-observability" }
lunaroute-routing = { path = "../lunaroute-routing" }
lunaroute-session = { path = "../lunaroute-session" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
eventsource-stream = { workspace = true }
flate2 = { workspace = true }
reqwest = { workspace = true }
