[package]
name = "lunaroute_integration_tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
lunaroute-core = { path = "../lunaroute-core" }
lunaroute-ingress = { path = "../lunaroute-ingress" }
lunaroute-egress = { path = "../lunaroute-egress" }
lunaroute-routing = { path = "../lunaroute-routing" }
lunaroute-observability = { path = "../lunaroute-observability" }
lunaroute-session = { path = "../lunaroute-session", features = ["sqlite-writer"] }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
wiremock = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
rusqlite = "0.37"

[dev-dependencies]
dotenv = "0.15"
tracing-subscriber = { workspace = true }
