[package]
name = "lunaroute-pii"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
regex = { workspace = true }
aho-corasick = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
