[package]
name = "lunaroute-routing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
lunaroute-core = { path = "../lunaroute-core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
