[package]
name = "lunaroute-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "lunaroute-server"
path = "src/main.rs"

[dependencies]
lunaroute-core = { path = "../lunaroute-core" }
lunaroute-ingress = { path = "../lunaroute-ingress" }
lunaroute-egress = { path = "../lunaroute-egress" }
lunaroute-routing = { path = "../lunaroute-routing" }
lunaroute-observability = { path = "../lunaroute-observability" }
lunaroute-session = { path = "../lunaroute-session", features = ["sqlite-writer"] }
lunaroute-ui = { path = "../lunaroute-ui" }

tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
anyhow = { workspace = true }
shellexpand = "3.1"

[dev-dependencies]
serial_test = "3.2"
