[package]
name = "lunaroute-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "lunaroute-server"
path = "src/main.rs"

[dependencies]
lunaroute-core = { path = "../lunaroute-core" }
lunaroute-config-file = { path = "../lunaroute-config-file" }
lunaroute-config-postgres = { path = "../lunaroute-config-postgres", optional = true }
lunaroute-session-sqlite = { path = "../lunaroute-session-sqlite" }
lunaroute-session-postgres = { path = "../lunaroute-session-postgres", optional = true }
lunaroute-ingress = { path = "../lunaroute-ingress" }
lunaroute-egress = { path = "../lunaroute-egress" }
lunaroute-routing = { path = "../lunaroute-routing" }
lunaroute-observability = { path = "../lunaroute-observability" }
lunaroute-session = { path = "../lunaroute-session", features = ["sqlite-writer"] }
lunaroute-ui = { path = "../lunaroute-ui" }

tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
anyhow = { workspace = true }
shellexpand = "3.1"
uuid = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
serial_test = "3.2"

[features]
default = []
postgres = ["lunaroute-session-postgres", "lunaroute-config-postgres"]
