[package]
name = "lunaroute-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
lunaroute-core = { path = "../lunaroute-core" }
lunaroute-storage = { path = "../lunaroute-storage" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
zstd = { workspace = true }

# SQLite support for session recording
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"], optional = true }

[features]
default = []
sqlite-writer = ["sqlx"]

[dev-dependencies]
tempfile = { workspace = true }
