[package]
name = "lunaroute-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
lunaroute-core = { path = "../lunaroute-core" }
lunaroute-storage = { path = "../lunaroute-storage" }
lunaroute-pii = { path = "../lunaroute-pii" }
lunaroute-observability = { path = "../lunaroute-observability", optional = true }
lunaroute-session-postgres = { path = "../lunaroute-session-postgres", optional = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
zstd = { workspace = true }
lru = "0.16"
rand = { workspace = true }
hex = "0.4"
dirs = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }

# SQLite support for session recording
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"], optional = true }

[features]
default = []
sqlite-writer = ["sqlx"]
postgres-writer = ["lunaroute-session-postgres"]
metrics = ["lunaroute-observability"]

[dev-dependencies]
tempfile = { workspace = true }
filetime = "0.2"
