[package]
name = "lunaroute-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Templating (compiled into binary)
askama = { version = "0.14", features = ["with-axum"] }
askama_axum = "0.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# LunaRoute dependencies
lunaroute-core = { path = "../lunaroute-core" }
lunaroute-session = { path = "../lunaroute-session" }
